Fix issue with TabSelector component overflowing container

--- a/packages/frontend/src/components/structural/components/TabSelector/index.module.css
+++ b/packages/frontend/src/components/structural/components/TabSelector/index.module.css
@@ -1,6 +1,6 @@
 .tab-selector {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: auto 1fr;
 
     width: 100%;
     height: 100%;
@@ -80,10 +80,12 @@
     position: relative;
     z-index: 0;
 
+    overflow-y: auto;
+
     outline: 1px solid black;
     background-color: rgb(226, 226, 226);
 
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     padding: 8px;
 }
